pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__alert_view_empty.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ Alerts (0) ──────────────────────────────────────────────────────────────────┐
│ No alerts                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
