pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__alert_view_with_data.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ Alerts (1) ──────────────────────────────────────────────────────────────────┐
│Sev  Time       Event             Table            Metric           Context   │
│                                                                              │
│⚠    12:00:00   stale_data        public.orders_li ratio=2.50×      staleness=│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
