pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__cdc_view.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ ▶ Change Buffers (2) ────────────────────────────────────────────────────────────────────────────┐
│Stream Table                 Source                       CDC Mode   Pending Rows   Buffer Size   │
│orders_live                  orders                       TRIGGER    250            50.0 KB       │
│revenue_daily                sales                        TRIGGER    50000          2.4 MB        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Trigger Inventory (1 triggers) ──────────────────────────────────────────────────────────────────┐
│Source Table                  Trigger Name                    Type           Present    Enabled   │
│orders                        pgt_cdc_orders                  DML            ✓          ✓         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
