pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__delta_inspector_with_selection.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Delta Inspector — public.orders_live   [Delta SQL]  Auxiliary Columns  Tab to│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Delta SQL ───────────────────────────────────────────────────────────────────┐
│                                                                              │
│ Delta SQL not yet loaded. Fetch it with:                                     │
│                                                                              │
│   :explain orders_live        (command palette)                              │
│                                                                              │
│ Or use the CLI:                                                              │
│                                                                              │
│   pgtrickle explain orders_live                                              │
│   pgtrickle explain --analyze                                                │
│   pgtrickle explain --operators                                              │
│   pgtrickle explain --dedup                                                  │
│                                                                              │
│ The delta SQL can be copied and run in psql for further analysis.            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
