pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__detail_error_table.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ revenue_daily — Properties ──────────────────────────────────────────────────┐
│ Name:     public.revenue_daily                                               │
│ Status:   ERROR    Effective: ✗ error                                        │
│ Mode:     DIFF                                                               │
│ Schedule: 5s                                                                 │
│ Stale:    yes  Staleness: -                                                  │
│ Tier:     hot  Populated: yes                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Change Activity ─────────────────────────────────────────────────────────────┐
│ Pending changes:  50,000  across 1 source(s)                                 │
│   sales: 50,000 rows (2.4 MB)                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Refresh Statistics ──────────────────────────────────────────────────────────┐
│ Total refreshes:  10                                                         │
│ Failed refreshes: 3                                                          │
│ Avg duration:     5.0 ms                                                     │
│ Last refresh:     2026-04-01 12:00:00                                        │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Recent Refreshes ────────────────────────────────────────────────────────────┐
│2026-04-01 11:59:55  DIFF  error  1ms                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Error Details & Upstream Health ─────────────────────────────────────────────┐
│ Last Error:                                                                  │
│ division by zero                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
