pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__detail_no_selection.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ Detail — no stream table selected ───────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
