pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__detail_with_selected_table.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ orders_live — Properties ────────────────────────────────────────────────────┐
│ Name:     public.orders_live                                                 │
│ Status:   ACTIVE    Effective: ✓ ok                                          │
│ Mode:     DIFF                                                               │
│ Schedule: 5s                                                                 │
│ Stale:    no  Staleness: -                                                   │
│ Tier:     hot  Populated: yes                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Change Activity ─────────────────────────────────────────────────────────────┐
│ Pending changes:  250  across 1 source(s)                                    │
│   orders: 250 rows (50.0 KB)                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Refresh Statistics ──────────────────────────────────────────────────────────┐
│ Total refreshes:  10                                                         │
│ Failed refreshes: 0                                                          │
│ Avg duration:     5.0 ms                                                     │
│ Last refresh:     2026-04-01 12:00:00                                        │
│ Differential:     95  Full: 5                                                │
│ Speedup (D→F):    48.0×                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Recent Refreshes ────────────────────────────────────────────────────────────┐
│2026-04-01 12:00:00  DIFF  success  3ms                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Error Details & Upstream Health ─────────────────────────────────────────────┐
│ No errors                                                                    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
